--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
     <title>Vite + React</title>
   </head>
-  <body class="dark:bg-slate-950">
-    <div id="root"></div>
+  <body class="dark:bg-slate-900">
+    <div id="root" class="h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
   </body>
