--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -9,6 +9,7 @@
   </head>
   <body class="dark:bg-slate-900">
     <div id="root" class="h-screen"></div>
+    <script src="http://localhost:8097"></script>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
   </body>
