--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Vite + React</title>
+    <title>Blogify</title>
   </head>
   <body class="dark:bg-slate-900">
     <div id="root" class="h-screen"></div>
